[tool.poetry]
name = "blogs"
version = "0.1.0"
description = "A one-stop solution for programmers, both experienced and amateurs alike to brush up their programming & Computer Science skills"
authors = ["Arindam Tanti <arindamtanti123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.12"
python-dotenv = "^1.0.1"
pip = "^24.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.12"
pip = "^24.0"
black = "^24.2.0"
flake8 = "^7.0.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
